--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@300;400;500;700&display=swap" rel="stylesheet">
   <title>Document</title>
 </head>
 <body>
@@ -61,6 +64,154 @@
           <a href="">
             <img src="img/btn-banner.png" alt="">
           </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="onayami">
+    <div class="container">
+      <div class="wrapper">
+        <div class="section-header">
+          <h2>大切なわんちゃんにこんなお悩みありませんか？</h2>
+          <img src="img/border-onayami.png" alt="">
+        </div>
+        <div class="content-wrapper">
+          <div class="above-wrapper">
+            <div class="content">
+              <img src="img/onayami-circle.png" alt="circle">
+              <p>飼い主を見上げて<br>よく目が合う</p>
+            </div>
+            <div class="content">
+              <img src="img/onayami-circle.png" alt="circle">
+              <p>去勢や避妊手術で<br>太ってしまった。<br>肥満ぎみと言われた</p>
+            </div>
+            <div class="content">
+              <img src="img/onayami-circle.png" alt="circle">
+              <p>おしりをぷりぷりして<br>歩いていて<br>後ろ足がガニ股だ</p>
+            </div>
+            <div class="content">
+              <img src="img/onayami-circle.png" alt="circle">
+              <p>お留守番が多い</p>
+            </div>
+          </div>
+          <div class="bottom-wrapper">
+            <div class="content">
+              <img src="img/onayami-circle.png" alt="circle">
+              <p>人にも犬にも<br>よく吠える</p>
+            </div>
+            <div class="content">
+              <img src="img/onayami-circle.png" alt="circle">
+              <p>7歳以上で<br>認知症やシニア期の<br>トラブルが心配</p>
+            </div>
+            <div class="content">
+              <img src="img/onayami-circle.png" alt="circle">
+              <p>耳や皮膚、目やにの<br>トラブルが<br>癖になっている</p>
+            </div>
+            <div class="content">
+              <img src="img/onayami-circle.png" alt="circle">
+              <p>便秘や下痢に<br>なりやすい</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <img src="img/footprints-left.png" alt="">
+    </div>
+  </section>
+
+  <section class="message">
+    <div class="container">
+      <div class="wrapper">
+        <img src="img/bg-message.png" alt="">
+        <h2>
+          <div class="text">
+            <p>大切な家族だから、マッサージによる『ケア』と『予防』で</p>
+            <img src="img/dotted1.png" alt="">
+          </div>
+          <br>
+          <div class="text text2">
+            <p>楽しく健康的な毎日を。</p>
+            <img src="img/dotted2.png" alt="">
+          </div>
+        </h2>
+        <p>わんちゃんが健康で楽しく、幸せに暮らせるかは、毎日一緒にいる飼い主さん次第。<br>そして、わんちゃんも『家族』だからこそ、最後の刻まで、元気にお散歩したり、遊んだり、お出かけしたり、一緒に好きなこと、楽しいことを長く続けられる身体で毎日を笑顔で過ごす。一緒に幸せな時間を過ごすために、飼い主さんとわんちゃんの健康なくしては何も出来ません。<br>わんちゃんが『辛い』『痛い』と感じる前に、わんちゃんの『ケア』と『予防』ができる保健室のような存在がある事で、より楽しく安心して充実した毎日を一緒に過ごせます。</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="features">
+    <div class="container">
+      <div class="wrapper">
+        <img src="img/bg-6points.png" alt="">
+        <div class="content-wrapper">
+          <img src="img/6points.png" alt="こころえくれれの6つのこだわり">
+          <div class="text-content-wrapper">
+            <div class="content">
+              <img src="img/point1.png" alt="知識ある手で大切なわんちゃんを担当">
+              <p>ペット解剖学を基礎から学んだセラピストが担当。経絡やリンパ、骨、筋肉を把握して優しい適切なタッチでマッサージさせて頂きます。</p>
+            </div>
+            <div class="content">
+              <img src="img/point2.png" alt="5,000人以上の人間の身体のお悩みを解決した実績">
+              <p>スパセラピスト国際ライセンスを持つセラピストとして、10年以上お客様のお身体とお悩みに日々向き合ってきました。わんちゃんの変化を敏感に感じることに自信があります。</p>
+            </div>
+            <div class="content">
+              <img src="img/point3.png" alt="完全オーダーメイドのマッサージ">
+              <p>わんちゃんと飼い主さんの日常や現在の身体の状態を手で把握しながら、毎回同じではなくその時々に必要な施術をします。マッサージ中の短時間でも変化に気づき、表情や鳴き声にまで気を配ります。</p>
+            </div>
+            <div class="content">
+              <img src="img/point4.png" alt="ご挨拶から始めるコミュニケーション">
+              <p>色んな性格のわんちゃんに合わせて、まずはそっとご挨拶から。ちょっと人見知りなわんちゃんでも、元気なわんちゃんでも様子を見ながらご挨拶させて頂きます。</p>
+            </div>
+            <div class="content">
+              <img src="img/point5.png" alt="日常を尊重するアフターカウンセリング">
+              <p>アフターカウンセリングでは「お仕事で忙しい」「わんちゃんの散歩でしか時間がとれない」といった日常を尊重したアドバイスをお伝えします。</p>
+            </div>
+            <div class="content">
+              <img src="img/point6.png" alt="身体を大切にするご褒美おやつ">
+              <p>マッサージ終了後に水分補給も兼ねたおやつをご提供。身体に良いものをしっかり循環させ、より免疫力を向上させたり、身体が柔軟かつ心地良くなるようなサポートをさせて頂きます。</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="contact">
+    <div class="container">
+      <div class="wrapper">
+        <div class="section-header">
+          <img src="img/contact-circle-left.png" alt="">
+          <h2>ご予約について</h2>
+          <img src="img/contact-circle-right.png" alt="">
+        </div>
+        <p>まずは無料カウンセリングをお気軽にお声がけください。2024年限定料金があります。<br>ご来店の際はわんちゃんにマナーウエアの着用をお願いしております。</p>
+        <div class="btn">
+          <a href="">ご予約はこちらから</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="profile">
+    <div class="container">
+      <div class="wrapper">
+        <div class="sec-header">
+          <h2>セラピストのご紹介</h2>
+          <img src="img/border-therapist.png" alt="">
+        </div>
+        <div class="content-wrapper">
+          <img src="img/therapist-img.png" alt="吉開 美咲">
+          <div class="text-wrapper">
+            <p class="name"><span>吉開 美咲</span><span>Misaki Yoshigai</span></p>
+            <ul>
+              <li>日本ペットマッサージ協会ペットマッサージ公式アカデミック修了</li>
+              <li>ペット東洋医学アドバイザー</li>
+              <li>動物経絡温灸取扱者</li>
+              <li>スパセラピスト国際ライセンス</li>
+              <li>美容専門学校講師</li>
+            </ul>
+            <p class="text">この度はサイトをご覧いただきありがとうございます。<br>「私に関わる皆様が、好きな事で溢れる毎日を送る為に、心身共に健康づくりをサポートする」というのが私が目指している事で、微力ながら私がお力になれる事だと信じています。</p>
+          </div>
         </div>
       </div>
     </div>
