--- a/index.html
+++ b/index.html
@@ -216,5 +216,84 @@
       </div>
     </div>
   </section>
+
+  <section class="service">
+    <div class="container">
+      <div class="wrapper">
+        <div class="sec-header">
+          <h2>サービス内容</h2>
+        </div>
+        <div class="service-wrapper">
+          <div class="service">
+            <p class="info">【2024年限定価格】</p>
+            <div class="service-name">
+              <p>わんちゃん健やか</p>
+              <img src="img/service-dots1-1.png" alt="">
+              <p>リンパマッサージ</p>
+              <img src="img/service-dots1-1.png" alt="">
+            </div>
+            <p class="price">45分<br>2,980円（税込）</p>
+            <img src="img/service-img1.png" alt="わんちゃんの画像">
+            <p class="notice">※時間は対面からアフターカウンセリングまでの
+            時間です。</p>
+            <p class="osusume">こんなわんちゃんにおすすめ</p>
+            <ul>
+              <li>お留守番が多い</li>
+              <li>よく吠える</li>
+              <li>飼い主さんをよく見上げている</li>
+            </ul>
+            <p class="text">リンパの流れに沿って優しく撫で、老廃物を流れをサポートします。優しく軽いタッチでツボも刺激し、わんちゃんのお悩みが少しでも解決できるよう、改善点を探しながらオーダーメイドで施術していきます。</p>
+          </div>
+          <div class="service">
+            <p class="info">【9月開始】</p>
+            <div class="service-name">
+              <p><br>動物温灸<br></p>
+              <img src="img/service-dots2.png" alt="">
+            </div>
+            <p class="price"><br>comming soon</p>
+            <img src="img/service-img2.png" alt="わんちゃんの画像">
+            <p class="notice">※時間は対面からアフターカウンセリングまでの
+            時間です。</p>
+            <p class="osusume">こんなわんちゃんにおすすめ</p>
+            <ul>
+              <li>鼻水が出やすい</li>
+              <li>7歳以上でシニア期に入る</li>
+              <li>皮膚疾患やヘルニア症状がある</li>
+            </ul>
+            <p class="text">リラックスをする神経(副交感神経)を
+            刺激し、リンパ球を増大させ、病気に負けない身体づくりを助けると言われている温熱療法の一つ「温灸」。温灸を動物へ安全に取り扱い、かつ経絡に沿って施術をしていきます。</p>
+          </div>
+          <div class="service">
+            <p class="info">【2024年限定価格】</p>
+            <div class="service-name">
+              <p>わんちゃん＋飼い主さん</p>
+              <img src="img/service-dots3-1.png" alt="">
+              <p>ペアマッサージ</p>
+              <img src="img/service-dots3-2.png" alt="">
+            </div>
+            <p class="price">110-135分<br>10,980円（税込）</p>
+            <img src="img/service-img3.png" alt="わんちゃんの画像">
+            <p class="notice">※時間は対面からアフターカウンセリングまでの
+            時間です。</p>
+            <p class="osusume">こんな飼い主さんにおすすめ</p>
+            <ul>
+              <li>散歩程度の運動しかできていない方</li>
+              <li>肩こりや腰痛などの痛みで辛い方</li>
+              <li>自分の将来の健康に不安がある方</li>
+            </ul>
+            <p class="text">わんちゃんも飼い主さんもオーダーメイドでマッサージさせて頂きます。詳しくは<a href="https://www.cocoroekurere.com/">サロンホームページ</a>サロンホームページをご覧ください。ご紹介者がいらっしゃらず、初めてご利用される場合は事前にzoomかお電話にて無料カウンセリングが必要です。出張での施術の場合、飼い主さんには人間用のベッドを持参して施術いたします。</p>
+          </div>
+        </div>
+        <p class="notice2">※出張料金に関しましては「よくある質問」をご覧ください。</p>
+        <div class="notice3">
+          <p>こころえくれれでは、売上の一部を保護猫・保護犬団体に寄付します。</p>
+          <img src="img/dots-notice.png" alt="">
+        </div>
+        <div class="btn">
+          <a href="">ご予約はこちらから</a>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
