--- a/index.html
+++ b/index.html
@@ -295,5 +295,55 @@
       </div>
     </div>
   </section>
+
+  <section class="flow">
+    <div class="container">
+      <div class="wrapper">
+        <div class="sec-header">
+          <h2>施術の流れ</h2>
+          <img src="img/border-flow.png" alt="">
+        </div>
+        <div class="flow-wrapper">
+          <div class="flow">
+            <h3>ご予約</h3>
+            <img src="img/flow-img1.png" alt="">
+            <p>公式LINEのご予約ボタンからご予約、またはインスタDMにてご連絡ください、同時に体調面、アレルギーの確認などもさせて頂きます。</p>
+            <img src="img/triangle-right.png" alt="" class="arrow">
+          </div>
+          <div class="flow">
+            <h3>ご対面</h3>
+            <img src="img/flow-img2.png" alt="">
+            <p>いよいよわんちゃんとのお顔合わせ!ご来店される場合にはまずは安心できる場所かどうかわんちゃんにじっくりクンクンして頂き、お声かけしながらマッサージを受ける準備をわんちゃんにして頂きます。</p>
+            <img src="img/triangle-right.png" alt="" class="arrow">
+          </div>
+          <div class="flow">
+            <h3>カウンセリング</h3>
+            <img src="img/flow-img3.png" alt="">
+            <p>飼い主さんに事前にいただいたご体調の確認をもとに気になっているお身体のことを聞かせて頂きます。実際に気になっているところを飼い主さんに触っていただいたり、一緒にわんちゃんの体調、お身体の調子を確認していきます。</p>
+            <img src="img/triangle-right.png" alt="" class="arrow">
+          </div>
+          <div class="flow">
+            <h3>施術</h3>
+            <img src="img/flow-img4.png" alt="">
+            <p>わんちゃんにお声かけしながらマッサージしていきます。その間飼い主さんはトロン顔をじっくり見るも良し、写真を撮るも良し。普段のわんちゃんの散歩の様子や、生活習慣などもお伺いしながらマッサージしていきます。</p>
+            <img src="img/triangle-right.png" alt="" class="arrow">
+          </div>
+          <div class="flow">
+            <h3>アフター<br>カウンセリング</h3>
+            <img src="img/flow-img5.png" alt="">
+            <p>マッサージ中に気づいたお身体の特徴や、気になるところを飼い主さんにお伝えします。また、お家で飼い主さんができるケアの方法や気をつけておくことなどもお伝えします。</p>
+            <img src="img/triangle-right.png" alt="" class="arrow">
+          </div>
+          <div class="flow">
+            <h3>お会計・次回のご予約</h3>
+            <img src="img/flow-img6.png" alt="">
+            <p>お会計は現金又はPayPay、15,000円以上はカード決済も可能です。次回のご予約は身体の具合や目的にもよりますが、2週間又は1ヶ月間隔でのご予約がおすすめです。</p>
+          </div>
+        </div>
+        <img class="dog" src="img/flow-dogs.png" alt="わんちゃん">
+      </div>
+      <img class="flow-bg" src="img/bg-flow.png" alt="">
+    </div>
+  </section>
 </body>
 </html>
