--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <title>Document</title>
 </head>
 <body>
@@ -345,5 +349,162 @@
       <img class="flow-bg" src="img/bg-flow.png" alt="">
     </div>
   </section>
+
+  <section class="customer-voice">
+    <div class="container">
+      <div class="wrapper">
+        <div class="sec-header">
+          <h2>お客様の声</h2>
+          <img src="img/border-voice.png" alt="">
+        </div>
+        <div class="slick-container">
+          <div class="voice-wrapper">
+            <div class="voice">
+              <div class="inner">
+                <div class="img-wrapper">
+                  <img src="img/customer-img1.png" alt="わんちゃん">
+                  <img src="img/customer-num1.png" alt="Interview 01">
+                </div>
+                <p class="name">ガガちゃん<span>6さい</span></p>
+                <p class="type"><img src="img/customer-voice.footprint.png" alt="footprint">イタリアン・グレイハウンド</p>
+                <p class="text">本日は施術ありがとうございました。我が家のガガは常に走り回って遊ぶぐらい元気なので、落ち着いてマッサージ受けれるか心配でしたが、とても落ち着いてマッサージを受けてくれたので良かったです。施術後もとてもリラックスしていたので、定期的に利用させて頂きます。</p>
+              </div>
+            </div>
+            <div class="voice">
+              <div class="inner">
+                <div class="img-wrapper">
+                  <img src="img/customer-img2.png" alt="わんちゃん">
+                  <img src="img/customer-num2.png" alt="Interview 02">
+                </div>
+                <p class="name">りおんちゃん<span>6さい</span></p>
+                <p class="type"><img src="img/customer-voice.footprint.png" alt="footprint">チワワ</p>
+                <p class="text">今日はありがとうございました。りおんもぐっすり眠ったりすごく気持ち良さそうにしてたので癒されたみたいです。わんちゃんマッサージは本当にいいと思います。またぜひお願いします。</p>
+              </div>
+            </div>
+            <div class="voice">
+              <div class="inner">
+                <div class="img-wrapper">
+                  <img src="img/customer-img3.png" alt="わんちゃん">
+                  <img src="img/customer-num3.png" alt="Interview 03">
+                </div>
+                <p class="name">ココちゃん<span>3さい</span></p>
+                <p class="type"><img src="img/customer-voice.footprint.png" alt="footprint">ジャックラッセルテリア</p>
+                <p class="text">出張でワンコにマッサージをしてもらいました。普段から元気なのでじっとしてなかったけど、マッサージ後にはガニ股脚が整っていました！関節に負担がかからないように定期的に受けさせたいです^ ^</p>
+              </div>
+            </div>
+            <div class="voice">
+              <div class="inner">
+                <div class="img-wrapper">
+                  <img src="img/customer-img4.png" alt="わんちゃん">
+                  <img src="img/customer-num4.png" alt="Interview 04">
+                </div>
+                <p class="name">ペコちゃん<span>6さい</span></p>
+                <p class="type"><img src="img/customer-voice.footprint.png" alt="footprint">ポメラニアン</p>
+                <p class="text">マッサージをしていただきました。マッサージ中とても気持ちよさそうにしていて、施術後はひとまわり小さくなってすぐに効果を実感出来て良かったです。またお願いしたいです。</p>
+              </div>
+            </div>
+            <div class="voice">
+              <div class="inner">
+                <div class="img-wrapper">
+                  <img src="img/customer-img5.png" alt="わんちゃん">
+                  <img src="img/customer-num5.png" alt="Interview 05">
+                </div>
+                <p class="name">チョコちゃん7さい<span>マハロちゃん7ヶ月</span></p>
+                <p class="type"><img src="img/customer-voice.footprint.png" alt="footprint">ミニチュアシュナウザー</p>
+                <p class="text">体を触られるのが苦手な長男わんこ、他のわんちゃんを見るととにかく遊びたい次男わんこ、大丈夫かなと思いながら体験させていただきましたが、どちらも上手にあやしながら施術してくださいました！また是非お願いしたいです＾＾</p>
+              </div>
+            </div>
+            <div class="voice">
+              <div class="inner">
+                <div class="img-wrapper">
+                  <img src="img/customer-img6.png" alt="わんちゃん">
+                  <img src="img/customer-num6.png" alt="Interview 06">
+                </div>
+                <p class="name">ことちゃん<span>10さい</span></p>
+                <p class="type"><img src="img/customer-voice.footprint.png" alt="footprint">キャバリア</p>
+                <p class="text">マッサージ中に終始、ワンコに話しかけながら施術してくださったのが何より安心できました。日頃の気になっている所も丁寧に診て下さり信頼できる方だと思いました。またお願いしてみたいと思いました。</p>
+              </div>
+              </div>
+            <div class="voice">
+              <div class="inner">
+                <div class="img-wrapper">
+                  <img src="img/customer-img7.png" alt="わんちゃん">
+                  <img src="img/customer-num7.png" alt="Interview 07">
+                </div>
+                <p class="name">ココちゃん&ナッツちゃん<span>1さい</span></p>
+                <p class="type"><img src="img/customer-voice.footprint.png" alt="footprint">チワワ</p>
+                <p class="text">出張でペットと夫のマッサージに来ていただきました！遊びたい盛りちゃんもかなりの人見知りくんでも、その子の性格に合わせて優しく施術いただき、ふたりともうっとり、お散歩もいつもよりルンルンでした。細胞レベル疲労回復マッサージも肩が上げやすくなり翌日の目覚めがいつもより良かったと夫が申しておりました。</p>
+              </div>
+            </div>
+          </div>
+          <div class="arrow prev"><i class="fa-solid fa-chevron-left"></i></div>
+          <div class="arrow next"><i class="fa-solid fa-chevron-right"></i></div>
+        </div>
+      </div>
+      <img src="img/bg-voice.png" alt="背景画像">
+    </div>
+  </section>
+
+  <section class="faq">
+    <div class="container">
+      <div class="wrapper">
+        <div class="sec-header">
+          <h2>よくあるご質問</h2>
+          <img src="img/border-faq.png" alt="">
+        </div>
+        <ul class="faq-wrapper">
+          <li>
+            <p>出張費用はいくらかかりますか？</p>
+            <img src="img/dots-faq.png" alt="">
+            <p>1箇所につきわんちゃんのみの場合は500円、飼い主さんのマッサージもある場合は1000円(八女市内500円)頂戴します。</p>
+          </li>
+          <li>
+            <p>猫は大丈夫でしょうか？</p>
+            <img src="img/dots-faq.png" alt="">
+            <p>ねこちゃんは警戒心の強い子も多く、現在、ねこちゃんにマッサージの提供はしていません。しかし、ねこちゃんへのマッサージも非常に有効なため、飼い主さんへzoomでのマッサージレクチャーを予定しております。又、ねこちゃんへは肉球診断をしておりますのでお気軽にお問い合わせください。</p>
+          </li>
+          <li>
+            <p>ビビりな子、よく吠える子でも大丈夫でしょうか？</p>
+            <img src="img/dots-faq.png" alt="">
+            <p>問題ありません。わんちゃんへ安心感が与えられるよう配慮し、わんちゃんのペースにも寄り添えるよう心がけています。逆にその問題が良い方向へ改善するお手伝いもできる可能性があるので、不安なことがある場合は何でも事前にお話しください。</p>
+          </li>
+        </ul>
+        <div class="faq-img-slide">
+          <ul class="faq-slide">
+            <li>
+              <img src="img/faq-img1.png" alt="">
+            </li>
+            <li>
+              <img src="img/faq-img2.png" alt="">
+            </li>
+            <li>
+              <img src="img/faq-img3.png" alt="">
+            </li>
+            <li>
+              <img src="img/faq-img4.png" alt="">
+            </li>
+            <li>
+              <img src="img/faq-img5.png" alt="">
+            </li>
+            <li>
+              <img src="img/faq-img6.png" alt="">
+            </li>
+            <li>
+              <img src="img/faq-img7.png" alt="">
+            </li>
+            <li>
+              <img src="img/faq-img8.png" alt="">
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
+
+  <script src="js/script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 </html>
