--- a/index.html
+++ b/index.html
@@ -300,6 +300,8 @@
     </div>
   </section>
 
+  <img src="img/bg-wabe1.png" alt="">
+
   <section class="flow">
     <div class="container">
       <div class="wrapper">
@@ -346,9 +348,10 @@
         </div>
         <img class="dog" src="img/flow-dogs.png" alt="わんちゃん">
       </div>
-      <img class="flow-bg" src="img/bg-flow.png" alt="">
     </div>
   </section>
+
+  <img src="img/bg-wabe2.png" alt="">
 
   <section class="customer-voice">
     <div class="container">
@@ -441,9 +444,10 @@
           <div class="arrow next"><i class="fa-solid fa-chevron-right"></i></div>
         </div>
       </div>
-      <img src="img/bg-voice.png" alt="背景画像">
     </div>
   </section>
+
+  <img src="img/bg-arrow.png" alt="">
 
   <section class="faq">
     <div class="container">
@@ -500,6 +504,111 @@
       </div>
     </div>
   </section>
+
+  <section class="contact sec">
+    <div class="container">
+      <div class="wrapper">
+        <div class="section-header">
+          <img src="img/contact-circle-left.png" alt="">
+          <h2>ご予約について</h2>
+          <img src="img/contact-circle-right.png" alt="">
+        </div>
+        <p>まずは無料カウンセリングをお気軽にお声がけください。2024年限定料金があります。<br>ご来店の際はわんちゃんにマナーウエアの着用をお願いしております。</p>
+        <div class="btn">
+          <a href="">ご予約はこちらから</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="salon-info">
+    <div class="container">
+      <h2>こころえくれれ</h2>
+      <div class="wrapper">
+        <div class="info-wrapper">
+          <ul>
+            <li>
+              <p class="header">住所</p>
+              <div class="body-wrapper">
+                <p>八女店：八女店：〒834-0064 福岡県八女市蒲原</p>
+                <p>福岡店：〒810-0005 福岡県福岡市中央区清川2丁目</p>
+              </div>
+            </li>
+            <li>
+              <p class="header">営業時間</p>
+              <div class="body-wrapper">
+                <p>11:00～22:00</p>
+              </div>
+            </li>
+            <li>
+              <p class="header">定休日</p>
+              <div class="body-wrapper">
+                <p>不定休</p>
+                <p>月・火・水曜午前：福岡市内優先</p>
+                <p>水曜午後・木・金：八女市内優先</p>
+                <p>土日：場合により</p>
+              </div>
+            </li>
+            <li>
+              <p class="header">駐車場</p>
+              <div class="body-wrapper">
+                <p>八女店：駐車場あり</p>
+                <p>福岡店：近隣コインパーキングをご利用ください</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="map-wrapper">
+          <div class="map">
+            <p>八女店：〒834-0064 福岡県八女市蒲原</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3337.603206363718!2d130.53459877589157!3d33.2244972609831!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3541af776ce891fb%3A0x12fe894c7520a43e!2z44GT44GT44KN44GI44GP44KM44KM5YWr5aWz!5e0!3m2!1sja!2sjp!4v1724292869332!5m2!1sja!2sjp" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+          <div class="map">
+            <p>福岡店：〒 810-0005 福岡県福岡市中央区清川2丁目</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3323.938181957791!2d130.405499885781!3d33.58095427373732!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3541918b4d9a7c6b%3A0xf36d82ed37ce6427!2z44GT44GT44KN44GI44GP44KM44KM56aP5bKh5riF5bed!5e0!3m2!1sja!2sjp!4v1724292967770!5m2!1sja!2sjp" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      <div class="wrapper">
+        <nav>
+          <div class="logo">
+            <a href="">
+              <img src="img/footer-logo.png" alt="こころえくれれ オーダーメイドマッサージ&メンテナンス">
+            </a>
+          </div>
+          <ul>
+            <li>
+              <a href="">サロンについて</a>
+            </li>
+            <li>
+              <a href="">サービス内容</a>
+            </li>
+            <li>
+              <a href="">施術の流れ</a>
+            </li>
+            <li>
+              <a href="">お客様の声</a>
+            </li>
+            <li>
+              <a href="">よくあるご質問</a>
+            </li>
+            <li>
+              <a href="">公式サイト</a>
+            </li>
+            <li>
+              <a href="">ご予約はこちら</a>
+            </li>
+          </ul>
+        </nav>
+        <p class="copy">&copy;Will Corp. 2024</p>
+      </div>
+    </div>
+  </footer>
 
 
 
