--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <header>
-    <div class="container">
+    <div class="container pc">
       <div class="wrapper">
         <h1>
           <a href="">
@@ -46,9 +46,48 @@
         </nav>
       </div>
     </div>
+    <div class="sp-logo sp">
+      <img src="img/logo.png" alt="こころえくれれ ペットマッサージ">
+    </div>
   </header>
 
-  <section class="fv">
+  <div class="sp-wrapper sp">
+    <ul class="menu-icon">
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+    <nav class="sp-menu">
+      <div class="logo">
+        <img src="/img/logo.png" alt="こころえくれれ">
+      </div>
+      <ul>
+        <li>
+          <a href="#"> <span></span> TOP <i class="fa-solid fa-chevron-right"></i></a>
+        </li>
+        <li>
+          <a href="#about"> <span></span> ABOUT <i class="fa-solid fa-chevron-right"></i></a>
+        </li>
+        <li>
+          <a href="#works"> <span></span> WORKS <i class="fa-solid fa-chevron-right"></i></a>
+        </li>
+        <li>
+          <a href="#service"> <span></span> SERVICE <i class="fa-solid fa-chevron-right"></i></a>
+        </li>
+        <li>
+          <a href="#media"> <span></span> MEDIA <i class="fa-solid fa-chevron-right"></i></a>
+        </li>
+        <li>
+          <a href="#partner"> <span></span> PARTNER <i class="fa-solid fa-chevron-right"></i></a>
+        </li>
+        <li>
+          <a href="#contact" target="_blank" rel="noopener noreferrer">CONTACT</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+
+  <section class="fv pc">
     <div class="container">
       <div class="wrapper">
         <div class="mv">
@@ -73,11 +112,33 @@
     </div>
   </section>
 
+  <section class="fv-sp sp">
+    <div class="container">
+      <div class="wrapper">
+        <div class="mv">
+          <img src="img/fvimg-sp.png" alt="">
+        </div>
+        <div class="text-wrapper">
+          <img src="img/fv-text.png" alt="福岡のペットマッサージサロン・こころえくれれ">
+          <h2>
+            <span class="first">健康と笑顔を守れるのは</span><br>
+            <span class="second">「家族だけ」</span>
+          </h2>
+        </div>
+        <div class="fv-banner">
+          <a href="">
+            <img src="img/btn-banner.png" alt="">
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section class="onayami">
     <div class="container">
       <div class="wrapper">
         <div class="section-header">
-          <h2>大切なわんちゃんにこんなお悩みありませんか？</h2>
+          <h2>大切なわんちゃんに<br class="sp">こんなお悩みありませんか？</h2>
           <img src="img/border-onayami.png" alt="">
         </div>
         <div class="content-wrapper">
@@ -92,7 +153,7 @@
             </div>
             <div class="content">
               <img src="img/onayami-circle.png" alt="circle">
-              <p>おしりをぷりぷりして<br>歩いていて<br>後ろ足がガニ股だ</p>
+              <p>おしりをぷりぷりして<br class="pc">歩いていて<br class="pc">後ろ足がガニ股だ</p>
             </div>
             <div class="content">
               <img src="img/onayami-circle.png" alt="circle">
@@ -106,11 +167,11 @@
             </div>
             <div class="content">
               <img src="img/onayami-circle.png" alt="circle">
-              <p>7歳以上で<br>認知症やシニア期の<br>トラブルが心配</p>
+              <p>7歳以上で<br class="pc">認知症やシニア期の<br class="pc">トラブルが心配</p>
             </div>
             <div class="content">
               <img src="img/onayami-circle.png" alt="circle">
-              <p>耳や皮膚、目やにの<br>トラブルが<br>癖になっている</p>
+              <p>耳や皮膚、目やにの<br class="pc">トラブルが<br class="pc">癖になっている</p>
             </div>
             <div class="content">
               <img src="img/onayami-circle.png" alt="circle">
@@ -126,16 +187,19 @@
   <section class="message">
     <div class="container">
       <div class="wrapper">
-        <img src="img/bg-message.png" alt="">
+        <img class="pc" src="img/bg-message.png" alt="">
+        <img class="sp" src="img/bg-message-sp.png" alt="">
         <h2>
-          <div class="text">
+          <div class="text pc">
             <p>大切な家族だから、マッサージによる『ケア』と『予防』で</p>
             <img src="img/dotted1.png" alt="">
           </div>
-          <br>
-          <div class="text text2">
+          <div class="text text2 pc">
             <p>楽しく健康的な毎日を。</p>
             <img src="img/dotted2.png" alt="">
+          </div>
+          <div class="text-sp sp">
+            <p>大切な家族だから、マッサージによる『ケア』と『予防』で楽しく健康的な毎日を。</p>
           </div>
         </h2>
         <p>わんちゃんが健康で楽しく、幸せに暮らせるかは、毎日一緒にいる飼い主さん次第。<br>そして、わんちゃんも『家族』だからこそ、最後の刻まで、元気にお散歩したり、遊んだり、お出かけしたり、一緒に好きなこと、楽しいことを長く続けられる身体で毎日を笑顔で過ごす。一緒に幸せな時間を過ごすために、飼い主さんとわんちゃんの健康なくしては何も出来ません。<br>わんちゃんが『辛い』『痛い』と感じる前に、わんちゃんの『ケア』と『予防』ができる保健室のような存在がある事で、より楽しく安心して充実した毎日を一緒に過ごせます。</p>
@@ -146,7 +210,7 @@
   <section class="features">
     <div class="container">
       <div class="wrapper">
-        <img src="img/bg-6points.png" alt="">
+        <img class="pc" src="img/bg-6points.png" alt="">
         <div class="content-wrapper">
           <img src="img/6points.png" alt="こころえくれれの6つのこだわり">
           <div class="text-content-wrapper">
