--- a/index.html
+++ b/index.html
@@ -429,23 +429,23 @@
             <div class="voice">
               <div class="inner">
                 <div class="img-wrapper">
-                  <img src="img/customer-img1.png" alt="わんちゃん">
-                  <img src="img/customer-num1.png" alt="Interview 01">
+                  <img src="img/customer-img7.png" alt="わんちゃん">
+                  <img src="img/customer-num1.png" alt="Interview 07">
                 </div>
-                <p class="name">ガガちゃん<span>6さい</span></p>
-                <p class="type"><img src="img/customer-voice.footprint.png" alt="footprint">イタリアン・グレイハウンド</p>
-                <p class="text">本日は施術ありがとうございました。我が家のガガは常に走り回って遊ぶぐらい元気なので、落ち着いてマッサージ受けれるか心配でしたが、とても落ち着いてマッサージを受けてくれたので良かったです。施術後もとてもリラックスしていたので、定期的に利用させて頂きます。</p>
+                <p class="name">ココちゃん&ナッツちゃん<span>1さい</span></p>
+                <p class="type"><img src="img/customer-voice.footprint.png" alt="footprint">チワワ</p>
+                <p class="text">出張でペットと夫のマッサージに来ていただきました！遊びたい盛りちゃんもかなりの人見知りくんでも、その子の性格に合わせて優しく施術いただき、ふたりともうっとり、お散歩もいつもよりルンルンでした。細胞レベル疲労回復マッサージも肩が上げやすくなり翌日の目覚めがいつもより良かったと夫が申しておりました。</p>
               </div>
             </div>
             <div class="voice">
               <div class="inner">
                 <div class="img-wrapper">
-                  <img src="img/customer-img2.png" alt="わんちゃん">
-                  <img src="img/customer-num2.png" alt="Interview 02">
+                  <img src="img/customer-img6.png" alt="わんちゃん">
+                  <img src="img/customer-num2.png" alt="Interview 06">
                 </div>
-                <p class="name">りおんちゃん<span>6さい</span></p>
-                <p class="type"><img src="img/customer-voice.footprint.png" alt="footprint">チワワ</p>
-                <p class="text">今日はありがとうございました。りおんもぐっすり眠ったりすごく気持ち良さそうにしてたので癒されたみたいです。わんちゃんマッサージは本当にいいと思います。またぜひお願いします。</p>
+                <p class="name">ことちゃん<span>10さい</span></p>
+                <p class="type"><img src="img/customer-voice.footprint.png" alt="footprint">キャバリア</p>
+                <p class="text">マッサージ中に終始、ワンコに話しかけながら施術してくださったのが何より安心できました。日頃の気になっている所も丁寧に診て下さり信頼できる方だと思いました。またお願いしてみたいと思いました。</p>
               </div>
             </div>
             <div class="voice">
@@ -462,19 +462,8 @@
             <div class="voice">
               <div class="inner">
                 <div class="img-wrapper">
-                  <img src="img/customer-img4.png" alt="わんちゃん">
-                  <img src="img/customer-num4.png" alt="Interview 04">
-                </div>
-                <p class="name">ペコちゃん<span>6さい</span></p>
-                <p class="type"><img src="img/customer-voice.footprint.png" alt="footprint">ポメラニアン</p>
-                <p class="text">マッサージをしていただきました。マッサージ中とても気持ちよさそうにしていて、施術後はひとまわり小さくなってすぐに効果を実感出来て良かったです。またお願いしたいです。</p>
-              </div>
-            </div>
-            <div class="voice">
-              <div class="inner">
-                <div class="img-wrapper">
                   <img src="img/customer-img5.png" alt="わんちゃん">
-                  <img src="img/customer-num5.png" alt="Interview 05">
+                  <img src="img/customer-num4.png" alt="Interview 05">
                 </div>
                 <p class="name">チョコちゃん7さい<span>マハロちゃん7ヶ月</span></p>
                 <p class="type"><img src="img/customer-voice.footprint.png" alt="footprint">ミニチュアシュナウザー</p>
@@ -484,23 +473,34 @@
             <div class="voice">
               <div class="inner">
                 <div class="img-wrapper">
-                  <img src="img/customer-img6.png" alt="わんちゃん">
-                  <img src="img/customer-num6.png" alt="Interview 06">
+                  <img src="img/customer-img4.png" alt="わんちゃん">
+                  <img src="img/customer-num5.png" alt="Interview 04">
                 </div>
-                <p class="name">ことちゃん<span>10さい</span></p>
-                <p class="type"><img src="img/customer-voice.footprint.png" alt="footprint">キャバリア</p>
-                <p class="text">マッサージ中に終始、ワンコに話しかけながら施術してくださったのが何より安心できました。日頃の気になっている所も丁寧に診て下さり信頼できる方だと思いました。またお願いしてみたいと思いました。</p>
+                <p class="name">ペコちゃん<span>6さい</span></p>
+                <p class="type"><img src="img/customer-voice.footprint.png" alt="footprint">ポメラニアン</p>
+                <p class="text">マッサージをしていただきました。マッサージ中とても気持ちよさそうにしていて、施術後はひとまわり小さくなってすぐに効果を実感出来て良かったです。またお願いしたいです。</p>
               </div>
-              </div>
+            </div>
             <div class="voice">
               <div class="inner">
                 <div class="img-wrapper">
-                  <img src="img/customer-img7.png" alt="わんちゃん">
-                  <img src="img/customer-num7.png" alt="Interview 07">
+                  <img src="img/customer-img1.png" alt="わんちゃん">
+                  <img src="img/customer-num6.png" alt="Interview 01">
                 </div>
-                <p class="name">ココちゃん&ナッツちゃん<span>1さい</span></p>
+                <p class="name">ガガちゃん<span>6さい</span></p>
+                <p class="type"><img src="img/customer-voice.footprint.png" alt="footprint">イタリアン・グレイハウンド</p>
+                <p class="text">本日は施術ありがとうございました。我が家のガガは常に走り回って遊ぶぐらい元気なので、落ち着いてマッサージ受けれるか心配でしたが、とても落ち着いてマッサージを受けてくれたので良かったです。施術後もとてもリラックスしていたので、定期的に利用させて頂きます。</p>
+              </div>
+            </div>
+            <div class="voice">
+              <div class="inner">
+                <div class="img-wrapper">
+                  <img src="img/customer-img2.png" alt="わんちゃん">
+                  <img src="img/customer-num7.png" alt="Interview 02">
+                </div>
+                <p class="name">りおんちゃん<span>6さい</span></p>
                 <p class="type"><img src="img/customer-voice.footprint.png" alt="footprint">チワワ</p>
-                <p class="text">出張でペットと夫のマッサージに来ていただきました！遊びたい盛りちゃんもかなりの人見知りくんでも、その子の性格に合わせて優しく施術いただき、ふたりともうっとり、お散歩もいつもよりルンルンでした。細胞レベル疲労回復マッサージも肩が上げやすくなり翌日の目覚めがいつもより良かったと夫が申しておりました。</p>
+                <p class="text">今日はありがとうございました。りおんもぐっすり眠ったりすごく気持ち良さそうにしてたので癒されたみたいです。わんちゃんマッサージは本当にいいと思います。またぜひお願いします。</p>
               </div>
             </div>
           </div>
@@ -594,7 +594,7 @@
             <li>
               <p class="header">住所</p>
               <div class="body-wrapper">
-                <p>八女店：八女店：〒834-0064 福岡県八女市蒲原</p>
+                <p>八女店：〒834-0064 福岡県八女市蒲原</p>
                 <p>福岡店：〒810-0005 福岡県福岡市中央区清川2丁目</p>
               </div>
             </li>
@@ -673,8 +673,6 @@
       </div>
     </div>
   </footer>
-
-
 
 
   <script src="js/script.js"></script>
